--- a/static/index.html
+++ b/static/index.html
@@ -3,54 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spanish to English Translator</title>
+    <title>Boubar Spanish to English Translator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 50px;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         .container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             max-width: 600px;
-            margin: 0 auto;
+            width: 100%;
             text-align: center;
+        }
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
         }
         textarea {
             width: 100%;
-            height: 100px;
+            height: 120px;
             margin-bottom: 20px;
             padding: 10px;
             font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: none;
         }
         button {
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #0056b3;
         }
         .translation {
             margin-top: 20px;
             font-size: 18px;
             font-weight: bold;
+            color: #333;
+        }
+        #loading {
+            color: #007bff;
+            font-weight: bold;
+        }
+        #charCounter {
+            font-size: 14px;
+            color: #666;
+            text-align: right;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Spanish to English Translator</h1>
-        <textarea id="inputText" placeholder="Enter Spanish text here..."></textarea>
-        <br>
+        <div>
+            <label for="language">Translate from:</label>
+            <select id="language" onchange="updatePlaceholder()">
+                <option value="es-en">Spanish to English</option>
+                <option value="en-es">English to Spanish</option>
+            </select>
+        </div>
+        <textarea id="inputText" placeholder="Enter Spanish text here..." oninput="updateCounter()"></textarea>
+        <div id="charCounter">0/500</div>
         <button onclick="translateText()">Translate</button>
-        <div class="translation" id="translationResult"></div>
+        <button onclick="clearFields()" style="margin-left: 10px; background-color: #dc3545;">Clear</button>
+        <div class="translation">
+            <div id="loading" style="display: none;">Translating...</div>
+            <div id="translationOutput"></div>
+        </div>
     </div>
 
     <script>
+        function updatePlaceholder() {
+            const language = document.getElementById("language").value;
+            const inputText = document.getElementById("inputText");
+            if (language === "es-en") {
+                inputText.placeholder = "Enter Spanish text here...";
+            } else {
+                inputText.placeholder = "Enter English text here...";
+            }
+        }
+
+        function updateCounter() {
+            const inputText = document.getElementById("inputText").value;
+            const charCounter = document.getElementById("charCounter");
+            charCounter.innerText = `${inputText.length}/500`;
+        }
+
+        function clearFields() {
+            document.getElementById("inputText").value = "";
+            document.getElementById("translationOutput").innerText = "";
+            updateCounter();
+        }
+
         async function translateText() {
             const inputText = document.getElementById("inputText").value;
-            const translationResult = document.getElementById("translationResult");
+            const language = document.getElementById("language").value;
+            const translationResult = document.getElementById("translationOutput");
+            const loading = document.getElementById("loading");
 
             if (!inputText) {
                 translationResult.innerText = "Please enter some text to translate.";
                 return;
             }
+
+            // Show loading indicator
+            loading.style.display = "block";
+            translationResult.innerText = "";
 
             try {
                 const response = await fetch("/translate", {
@@ -58,7 +133,7 @@
                     headers: {
                         "Content-Type": "application/json",
                     },
-                    body: JSON.stringify({ text: inputText }),
+                    body: JSON.stringify({ text: inputText, language: language }),
                 });
 
                 if (!response.ok) {
@@ -70,6 +145,9 @@
             } catch (error) {
                 translationResult.innerText = "An error occurred. Please try again.";
                 console.error(error);
+            } finally {
+                // Hide loading indicator
+                loading.style.display = "none";
             }
         }
     </script>
